[gd_scene load_steps=3 format=2]

[ext_resource path="res://EnemyEntity.gd" type="Script" id=1]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="HitBox" type="CollisionShape2D" parent="."]

[node name="VisionRange" type="Area2D" parent="."]

[node name="VisionShape" type="CollisionShape2D" parent="VisionRange"]

[node name="AggroRange" type="Area2D" parent="."]

[node name="AggroShape" type="CollisionShape2D" parent="AggroRange"]

[node name="AttackPoint" type="Area2D" parent="."]

[node name="AttackRange" type="CollisionShape2D" parent="AttackPoint"]
